# alpenglow-vote

./: .gitignore  Cargo.toml  README.md  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: main.yml
generate-so/: Cargo.toml  build.rs
generate-so/src/: lib.rs
interface/: Cargo.toml
interface/src/: error.rs  instruction.rs  lib.rs
interface/src/state/: mod.rs  vote_state_deserialize.rs  vote_state_versions.rs
program/: Cargo.toml  build.rs  program-id.md
program/benches/: compute_units.md  compute_units.rs
program/src/: accounting.rs  bls.rs  bls_message.rs  certificate.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  vote.rs  vote_processor.rs
program/tests/: accounting.rs
scripts/: solana.dic
scripts/rust/: audit.mjs
