[package]
name = "generate-so"
description = "Generate alpenglow-vote.so"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/alpenglow-vote"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "build_alpenglow_vote"

[dev-dependencies]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
