[package]
name = "generate-so"
description = "Generate alpenglow-vote.so"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/alpenglow-vote"
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
build-print = "0.1.1"

[dependencies]
alpenglow-vote = { path = "../program" }

[features]
no-entrypoint = []
test-sbf = []

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-vote-interface = "2.2.0"
solana-account = "2.2.0"

[dev-dependencies]
lazy_static = "1.5.0"
serial_test = "3.2.0"
solana-program-test = "2.2.0"
solana-sdk = "2.2.0"
solana-ledger = "2.2.0"
solana-entry = "2.2.0"
solana-client = "2.2.0"
rand = "0.9.0"
test-case = "3.3.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
