[package]
name = "alpenglow-vote-interface"
version = "0.1.0"
description = "Instructions and constructors for the Alpenglow vote program"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { version = "1.3.3", optional = true }
num-derive = { version = "0.4.2" }
num-traits = { version = "0.2.19" }
serde = { version = "1.0.217", optional = true }
serde_derive = { version = "1.0.217", optional = true }
solana-clock = "^2.1"
solana-decode-error = "^2.1"
solana-frozen-abi = { version = "^2.1", features = [
    "frozen-abi",
], optional = true }
solana-frozen-abi-macro = { version = "^2.1", features = [
    "frozen-abi",
], optional = true }
solana-hash = "^2.1"
solana-instruction = { version = "^2.1", features = ["std"] }
solana-pubkey = { version = "^2.1" }
solana-rent = { version = "^2.1" }
solana-sdk-ids = { version = "^0.0.3" }
solana-serde-varint = { version = "^2.1", optional = true }
solana-serialize-utils = { version = "^2.1", optional = true }
solana-short-vec = { version = "^2.1", optional = true }
solana-system-interface = { version = "^1.0.0", features = ["bincode"], optional = true }

[target.'cfg(target_os = "solana")'.dependencies]
solana-serialize-utils = { version = "^2.1" }

[dev-dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
itertools = { version = "0.14.0" }
rand = { version = "0.9.0" }
solana-epoch-schedule = { version = "^2.1" }
solana-logger = { version = "^2.1" }
solana-pubkey = { version = "^2.1", features = ["dev-context-only-utils"] }
alpenglow-vote-interface = { path = ".", features = ["dev-context-only-utils"] }

[features]
bincode = [
    "dep:bincode",
    "dep:solana-serialize-utils",
    "dep:solana-system-interface",
    "serde"
]
dev-context-only-utils = ["bincode"]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "serde",
    "solana-hash/frozen-abi",
    "solana-pubkey/frozen-abi",
    "solana-short-vec/frozen-abi",
]
serde = [
    "dep:serde",
    "dep:serde_derive",
    "dep:solana-serde-varint",
    "dep:solana-short-vec",
    "solana-hash/serde",
    "solana-pubkey/serde"
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[lints]
workspace = true
