[package]
name = "alpenglow-vote"
version = "0.1.0"
description = "Alpenglow vote program"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/alpenglow-vote"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "dep:solana-logger",
    "solana-hash/frozen-abi",
    "serde",
]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
bitflags = { version = "2.9.0", features = ["serde"] }
bytemuck = { version = "1.22.0", features = ["derive"] }
num_enum = "0.7.3"
bincode = "1.3.3"
num-derive = "0.4"
num-traits = "0.2"
either = "1.14.0"
solana-program = "2.2.0"
solana-signature = "2.2.0"
thiserror = "2.0"
spl-pod = "0.5.0"
solana-hash = "2.2.0"
solana-frozen-abi = { version = "2.2.0", optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { version = "2.2.0", optional = true, features = [
    "frozen-abi",
] }
solana-logger = { version = "2.2.0", optional = true }
serde = { version = "1.0.218", optional = true } # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_derive = { version = "1.0.218", optional = true } # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251

[dev-dependencies]
lazy_static = "1.5.0"
serial_test = "3.2.0"
solana-program-test = "2.2.0"
solana-sdk = "2.2.0"
solana-ledger = "2.2.0"
solana-entry = "2.2.0"
solana-client = "2.2.0"
rand = "0.9.0"
test-case = "3.3.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
