[package]
name = "alpenglow-vote"
version = "0.1.0"
description = "Alpenglow vote program"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/alpenglow-vote"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "dep:solana-logger",
    "solana-hash/frozen-abi",
    "serde",
]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
bincode = "1.3.3"
bitflags = { version = "2.9.0", features = ["serde"] }
bytemuck = { version = "1.22.0", features = ["derive"] }
either = "1.11.0"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.3"
serde = { version = "1.0.217", optional = true } # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_derive = { version = "1.0.217", optional = true } # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
solana-bls = { version = "2.3.0", git = "https://github.com/anza-xyz/alpenglow" }
solana-frozen-abi = { version = "2.2.1", optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { version = "2.2.1", optional = true, features = [
    "frozen-abi",
] }
solana-hash = "2.2.1"
solana-logger = { version = "2.2.1", optional = true }
solana-program = "2.2.1"
solana-signature = "2.2.1"
spl-pod = "0.5.0"
thiserror = "2.0"

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-vote-interface = "2.2.1"
solana-account = "2.2.1"

[dev-dependencies]
lazy_static = "1.5.0"
rand = "0.9.0"
serial_test = "3.2.0"
solana-client = "2.2.1"
solana-entry = "2.2.1"
solana-ledger = "2.2.1"
solana-program-runtime = ">=2.0.0, <2.2.6"
solana-program-test = "2.2.1"
solana-sdk = "2.2.1"
test-case = "3.3.1"
mollusk-svm = "0.1.4"
mollusk-svm-bencher = "0.1.4"

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "compute_units"
harness = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
